--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
-<html>
-    <head>
-        <title>Gato Bongo</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BongoCat Game</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+</head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+<body>
+    <header>
+        <div class="titulo">
+            ¡Bienvenido al BongoCat Game!
+        </div>
+    </header>
 
-    <body>
-        <header>
-            <div class="titulo">
-                BongoCat Game
-            </div>
-        </header>
+    <section class="principal">
+        <div class="leaderboard">
 
-        <section class="principal">
-            <div class="laederboard">
-                <div class="cps">
-                    <p class="Clicks"></p>
-                </div>
-                <div class="Tiempo">
-                    <p class="T-maximo"></p>
-                </div>
+            <div class="Tiempo">
+                <p id="tiempoText">Segundos Transcurridos: 0s</p>
             </div>
-            <div class="imagen" id="imagenDiv">
-                <img src="Frames\CLAP.webp" alt="Frame1" id="BongoClap">
+            <div class="cps">
+                <p>¡Haz clic en BongoCat para ganar!</p>
+                <p id="cpsText">Clics por Segundo: 0 CPS</p>
             </div>
-        </section>
-        <script src="script.js"></script>
-    </body>
+
+            <div class="puntos">
+                <p class="puntucionActual"></p>
+                <p class="PuntajesTotales"></p>
+            </div>
+        </div>
+        <div class="imagen" id="imagenDiv">
+            <img src="Frames\CLAP.webp" alt="Frame1" id="BongoClap">
+        </div>
+    </section>
+    <script src="script.js"></script>
+</body>
 </html>
