Inclusion de registro e inicio de secion

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
             <div class="Tiempo">
                 <p id="tiempoText">Segundos Transcurridos: 0s</p>
             </div>
+            </div>
+            
             <div class="cps">
                 <p>¡Haz clic en BongoCat para ganar!</p>
                 <p id="cpsText">Clics por Segundo: 0 CPS</p>
+            </div>
             </div>
 
             <div class="puntos">
