--- a/intro.html
+++ b/intro.html
@@ -24,12 +24,21 @@
                 <div class="logo">
                     <h2><a href="#">BongoCat</a></h2>
                 </div>
+
+                <nav>
+                    <ul>
+                        <li class="active"><a href="">Iniciar secion</a></li>
+                        <li><a href=""> Registrarse</a></li>
+                        <li><a href="">sobrante</a></li>
+                        <li><a href="">sobrante</a></li>
+                        <li class="btn"><a href="">sobrante</a></li>                </nav>
+
             </header>
             <div class="content">
                 <div class="main-text">
                     <h6>#1 Trending</h6>
                     <h3>Empresa</h3>
-                    <h1>BongCat</h1>
+                    <h1>BongoCat</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, veniam.</p>
                     <a href="index.html">Play Now</a>
                 </div>
