--- a/sesion.html
+++ b/sesion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="style_sesion.css">
+    <link rel="stylesheet" href="Styles/style_sesion.css">
 </head>
 <body>
     <form method="post">
