--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BongoCat Game</title>
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
 </head>
 
@@ -35,8 +35,9 @@
             </div>
         </div>
         <div class="imagen" id="imagenDiv">
-            <img src="Frames\CLAP.webp" alt="Frame1" id="BongoClap">
+            <img src="Frames\CLAP.webp" alt="Frame1" id="BongoClap" draggable="false" ondragstart="return false;">
         </div>
+        
     </section>
     <script src="script.js"></script>
 </body>
