--- a/intro.html
+++ b/intro.html
@@ -27,11 +27,10 @@
 
                 <nav>
                     <ul>
-                        <li class="active"><a href="">Iniciar secion</a></li>
-                        <li><a href=""> Registrarse</a></li>
-                        <li><a href="">sobrante</a></li>
-                        <li><a href="">sobrante</a></li>
-                        <li class="btn"><a href="">sobrante</a></li>                </nav>
+                        <li class="active"><a href="sesion.html">Iniciar secion</a></li>
+                        <li class="btn"><a href="registro.php">Registrarse</a></li>
+                    </ul>
+                </nav>
 
             </header>
             <div class="content">
@@ -40,7 +39,7 @@
                     <h3>Empresa</h3>
                     <h1>BongoCat</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, veniam.</p>
-                    <a href="index.html">Play Now</a>
+                    <a href="index1.php">Jugar Offline</a> <a href="index.html">Jugar Online</a>
                 </div>
 
                 <div class="social">
@@ -53,7 +52,7 @@
                 </div>
 
                 <div class="image">
-                    <img src="images/bongocat.png" alt="aqui una foto del juego">
+                    <img src="images/pinpon.png" alt="aqui una foto del juego">
                 </div>
 
             </div>
